/**
 * Copyright (C) 2009-2011 Scalable Solutions AB <http://scalablesolutions.se>
 */

package akka.actor;

/*
  Compile with:
  cd ./akka-remote/src/test/protocol
  protoc ProtobufProtocol.proto --java_out ../java
*/

message ProtobufPOJO {
  required uint64 id = 1;
  required string name = 2;
  required bool status = 3;
}

message Counter {
  required uint32 count = 1;
}

message DualCounter {
  required uint32 count1 = 1;
  required uint32 count2 = 2;
}
